# skylapse

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.windsurf/docs/: focus-tool.md  prd.md  sprint-1.md
.windsurf/rules/: coding-rules.md
.windsurf/workflows/: pi-engineer.md
configs/: config.example.yaml
deploy/scripts/: deploy_pi.sh  pi_setup.sh
deploy/systemd/: skylapse-api.service
src/app/: __init__.py  camera.py  capture.py  config.py  db.py  main.py
src/app/static/: focus.html  index.html
tests/: test_api.py  test_capture.py  test_focus_api.py  test_images_api.py
web/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
web/.svelte-kit/: ambient.d.ts
web/.svelte-kit/output/client/.vite/: manifest.json
web/.svelte-kit/output/client/_app/: version.json
web/.svelte-kit/output/client/_app/immutable/assets/: 0.BpmiOtnh.css  _page.D-9mQtpo.css
web/.svelte-kit/output/server/: index.js  manifest-full.js
web/.svelte-kit/output/server/.vite/: manifest.json
web/.svelte-kit/output/server/chunks/: internal.js  ssr.js
web/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
web/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js
web/.svelte-kit/types/: route_meta_data.json
web/.svelte-kit/types/src/routes/: $types.d.ts
web/.svelte-kit/types/src/routes/focus/: $types.d.ts
web/src/: app.css
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/focus/: +page.svelte
(+15 files in other folders)
